--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -184,6 +184,9 @@
         }
 
         &__img {
+            img {
+                height: 300px;
+            }
             .img__discord {
                 height: 100px;
             }
